@media between 768 and 992px. offset logic added to the navbar controller for the correct scroll alignment in this viewport. new col-sm-* classes added for proper layout. a padding-container class was also added to wrap padding, 30px on either of of certain divs

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -204,7 +204,7 @@ ul.nav.navbar-nav.navbar-right {
 
 }
 .jointext {
-    font-size: 1.1em;
+    font-size: 1.3em;
     
 }
 .show-on-only-xs-devices {
@@ -269,16 +269,11 @@ ul.nav.navbar-nav.navbar-right {
 
 .car {
     margin-top: 10em;
-    position:absolute;
     width: 45em;
-    right: 0;
 }
 
 .welcome-text {
-    // margin-top: 10em;
-    // width: 100%;
-    // height: 60em;
-    // margin-left: 3em;
+    font-size: 1.3em;
 }
 
 .jukebox {
@@ -299,9 +294,9 @@ ul.nav.navbar-nav.navbar-right {
 }
 
 .show-text {
-    margin-left: 3em;
+    
     height: 130em;
-    margin-top: 10em;
+    
 }
 
 .show-details {
@@ -450,6 +445,7 @@ textarea {
         height: 524px;
     }
 }
+
 @media (max-width: 500px) {
     .mic {
         width: auto;
@@ -458,11 +454,32 @@ textarea {
     }
 }
 @media (min-width: 769px) and (max-width: 992px) {
+    .padding-container {
+        padding: 0 30px 0 30px;
+    }
+    .expressinput {
+        width: 48%;
+    }
+    #section-1 {
+        margin-top: 12em;
+    }
     .train {
         width: 100%;
     }
     .welcome {
         opacity: 1;
         width: 100%;
+    }
+    #section-3 {
+        margin-top: 12em;
+        height: 700px;
+    }
+    .guitar {
+        width: auto;
+        height: 800px;
+        margin-top: 1em;
+    }
+    .show-text {
+        max-height: 600px;
     }
 }
